Update Bot Control v0.2.3

--- a/Bot Control v0.2.3
+++ b/Bot Control v0.2.3
@@ -90,7 +90,7 @@ local bridgebool = nil
 local Admins = {}
 
 --version of the script
-print("Death's bot controller VERSION: 0.1.0")
+print("Death's bot controller VERSION: 0.2.3")
 
 --print cmds in console
 if printcmd then
@@ -101,52 +101,52 @@ print("[plr] = player (you don't need to put the full username or display name o
 print("<number> = need to be a number to make it work")
 print("(string) = word or a sentence")
 print("-------------------------------------------------------------------")
-print(";status                              |  check if bots are active")
-print(";index                               |  show bots' index")
-print(";follow [plr]                        |  follow someone")
-print(";quit                                |  disconnect admins and owner from the script")
-print(";dance <number>                      |  make bots dance")
-print(";undance                             |  make bots stop dancing")
-print(";reset                               |  make bots reset")
-print(";jump                                |  make bots jump")
-print(";say (sentence)                      |  make bots say something")
-print(";unfollow                            |  unfollow the player that the bots are following")
-print(";orbit [plr] <radius> <speed>        |  orbit around someone V1 (normal orbit)")
-print(";orbit2 [plr] <radius> <speed>       |  orbit around someone V2 (cooler)")
-print(";orbit3 [plr] <radius> <speed>       |  orbit around someone V3")
-print(";orbit4 [plr] <radius> <speed>       |  orbit around someone V4")
-print(";orbit5 [plr] <radius> <speed>       |  orbit around someone V5")
-print(";orbit6 [plr] <radius> <speed>       |  orbit around someone V6 (chaotic)")
-print(";unorbit                             |  stop bots from orbiting")
-print(";goto [plr]                          |  teleport bots to a player")
-print(";left [plr]                          |  make a line with the bots")
-print(";right [plr]                         |  make a line with the bots")
-print(";ws <number>                         |  change bots' walk speed")
-print(";loopjump                            |  make bots jump in a loop")
-print(";unloopjump                          |  stop the jump loop")
-print(";circle <number>                     |  make bots form a circle around you")
-print(";channel <number>                    |  change the bot that says the messages")
-print(";worm [plr]                          |  make a worm/train/snake formation with bots")
-print(";unworm                              |  stop the worm/train/snake formation")
-print(";spin <number>                       |  make bots spin")
-print(";unspin                              |  make bots stop spinning")
-print(";admin [plr]                         |  give admin to someone, users with admin permission will be allowed to control the bots")
-print(";arch <number>                       |  make a half-circle with the bots")
-print(";stalk [plr]                         |  follow someone and walk around them")
-print(";unstalk                             |  stop following someone and walking around them")
-print(";help                                |  chat all available commands")
-print(";tower [plr]                         |  makes a tower of bots")
-print(";untower                             |  undo the tower")
-print(";fix                                 |  try to fix the bot if glitched")
-print(";fireworks [plr]                     |  launch bots in the air and make them explode")
-print(";explode [plr]                       |  launch bots in the air and make them explode")
-print(";fling [plr]                         |  launch bots in the air and make them fling")
-print(";unfling                             |  stop bots from flinging")
-print(";elevator [plr]                      |  make bots form a tower")
-print(";unelevator                          |  stop the tower")
-print(";gojo [plr]                          |  stop the tower")
-print(";bridge [plr]                        |  stop the tower")
-print(";unbridge                            |  stop the tower")
+print(";status                              |  Check if bots are active")
+print(";index                               |  Show bots' index")
+print(";follow [plr]                        |  Follow someone")
+print(";quit                                |  Disconnect admins and owner from the script")
+print(";dance <number>                      |  Make bots dance")
+print(";undance                             |  Make bots stop dancing")
+print(";reset                               |  Make bots reset")
+print(";jump                                |  Make bots jump")
+print(";say (sentence)                      |  Make bots say something")
+print(";unfollow                            |  Unfollow the player that the bots are following")
+print(";orbit [plr] <radius> <speed>        |  Orbit around someone V1 (normal orbit)")
+print(";orbit2 [plr] <radius> <speed>       |  Orbit around someone V2 (cooler)")
+print(";orbit3 [plr] <radius> <speed>       |  Orbit around someone V3")
+print(";orbit4 [plr] <radius> <speed>       |  Orbit around someone V4")
+print(";orbit5 [plr] <radius> <speed>       |  Orbit around someone V5")
+print(";orbit6 [plr] <radius> <speed>       |  Orbit around someone V6 (chaotic)")
+print(";unorbit                             |  Stop bots from orbiting")
+print(";goto [plr]                          |  Teleport bots to a player")
+print(";left [plr]                          |  Make a line with the bots going left")
+print(";right [plr]                         |  Make a line with the bots going right")
+print(";ws <number>                         |  Change bots' walk speed")
+print(";loopjump                            |  Make bots jump in a loop")
+print(";unloopjump                          |  Stop the jump loop")
+print(";circle <number>                     |  Make bots form a circle around you")
+print(";channel <number>                    |  Change the bot that says the messages")
+print(";worm [plr]                          |  Make a worm/train/snake formation with bots")
+print(";unworm                              |  Stop the worm/train/snake formation")
+print(";spin <number>                       |  Make bots spin")
+print(";unspin                              |  Make bots stop spinning")
+print(";admin [plr]                         |  Give admin to someone, users with admin permission can control the bots")
+print(";arch <number>                       |  Make a half-circle with the bots")
+print(";stalk [plr]                         |  Follow someone and walk around them")
+print(";unstalk                             |  Stop following someone and walking around them")
+print(";help                                |  Chat all available commands")
+print(";tower [plr]                         |  Makes a tower of bots")
+print(";untower                             |  Undo the tower")
+print(";fix                                 |  Try to fix the bot if glitched")
+print(";fireworks [plr]                     |  Launch bots in the air and make them explode")
+print(";explode [plr]                       |  Teleports bots at the player and make them explode")
+print(";fling [plr]                         |  Teleports bots at the player and fling them")
+print(";unfling                             |  Stop bots from flinging")
+print(";elevator [plr]                      |  Make bots form a platform which rises upward")
+print(";unelevator                          |  Stop the elevator")
+print(";gojo [plr]                          |  Make bots do the hollow purple sequence")
+print(";bridge [plr]                        |  Make bots form a bridge infront of playe")
+print(";unbridge                            |  Stop the bridge")
 end
 
 -- Services
